finished home and team page

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -6,7 +6,7 @@ title: Le Wagon - Middleman - About
   <div class="about-content">
     <h1>This template was built with <i class="fa fa-heart"></i> by</h1>
     <ul class="list-inline">
-      <% data.users.each do |user| %>
+      <% data.users.first(2).each do |user| %>
         <li>
           <% link_to "https://kitt.lewagon.com/alumni/#{user.github_nickname}", target: "_blank" do %>
             <%= image_tag "https://kitt.lewagon.com/placeholder/users/#{user.github_nickname}", class: "img-circle" %>
