Added CSS for colors and fonts to over-ride Bootstrap theme

--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -10,16 +10,17 @@
   justify-content: space-between;
 }
 
-/* Logo */
-.navbar-wagon-brand img {
-  height: 50px;
-}
-
-/* User Avatar */
-.navbar-wagon .avatar {
-  height: 35px;
-  width: 35px;
-  border-radius: 50%;
+.navbar-wagon-brand {
+    /* Logo */
+    img {
+    height: 50px;
+  }
+    /* User Avatar */
+    width: 35px;
+    .avatar {
+    height: 35px;
+    border-radius: 50%;
+  }
 }
 
 /* Right section */
@@ -48,20 +49,20 @@
 /* Dropdown menu */
 .navbar-wagon-dropdown-menu {
   margin-top: 15px;
-  box-shadow: 1px 1px 4px #E6E6E6;
-  border-color: #E6E6E6;
+  box-shadow: 1px 1px 4px $orange;
+  border-color: $yellow;
 }
 .navbar-wagon-dropdown-menu li > a {
   transition: color 0.3s ease;
   font-weight: lighter !important;
-  color: #999999 !important;
+  color: $yellow;
   font-size: 15px !important;
   line-height: 22px !important;
   padding: 10px 20px;
 }
 .navbar-wagon-dropdown-menu li > a:hover {
   background: transparent !important;
-  color: black !important;
+  color: $orange;
 }
 .navbar-wagon-dropdown-menu:before {
   content: ' ';
@@ -72,6 +73,6 @@
   top: -6px;
   background-color: white;
   transform: rotate(45deg);
-  border-left: 1px solid #E6E6E6;
-  border-top: 1px solid #E6E6E6;
+  border-left: 1px solid $yellow;
+  border-top: 1px solid $yellow;
 }
