--- a/source/stylesheets/components/_card.scss
+++ b/source/stylesheets/components/_card.scss
@@ -25,13 +25,15 @@
   bottom: 10px;
   left: 10px;
 }
-.card-description h2 {
-  font-size: 24px;
-}
-.card-description p {
-  font-size: 14px;
-  opacity: 0.7;
-  font-weight: lighter;
+.card-description {
+    h2 {
+    font-size: 24px;
+  }
+    p {
+    font-size: 14px;
+    opacity: 0.7;
+    font-weight: lighter;
+  }
 }
 .card-link {
   position: absolute;
