--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -2,9 +2,9 @@
 
 // For example:
 $red: #EE5F5B;
-$blue: #469AE0;
+$blue: #f5fac8;
 $yellow: #FDB631;
-$orange: #E67E22;
+$orange: #5ac8d8;
 $green: #32B796;
 $gray: #000000;
 $light-gray: #F4F4F4;
